Fixed overflow on huddle events and made links hot.

--- a/public/css/agenda.css
+++ b/public/css/agenda.css
@@ -69,6 +69,10 @@ ul[rn-carousel] li {
 	min-width: 170px;
 }
 
+.event .no-min-width {
+	min-width: 0;
+}
+
 .half-hour-marker .marker {
 	opacity: .1;
 }
